--- a/CEDAL Website/CEDAL Website.csproj
+++ b/CEDAL Website/CEDAL Website.csproj
@@ -82,7 +82,9 @@
     <Content Include="Charity2\js\main.js" />
     <Content Include="Charity2\js\owl.carousel.min.js" />
     <Content Include="Contact.aspx" />
+    <Content Include="Donate.aspx" />
     <Content Include="Events.aspx" />
+    <Content Include="Gallery.aspx" />
     <Content Include="Home.aspx" />
     <Content Include="img\16thJune.jpg" />
     <Content Include="img\academic support.jpg" />
@@ -148,6 +150,7 @@
     <Content Include="Login\vendor\select2\select2.js" />
     <Content Include="Login\vendor\select2\select2.min.css" />
     <Content Include="Login\vendor\select2\select2.min.js" />
+    <Content Include="OurWork.aspx" />
     <Content Include="Support.aspx" />
     <Content Include="Volunteer.aspx" />
     <Content Include="Web.config" />
@@ -167,12 +170,26 @@
     <Compile Include="Contact.aspx.designer.cs">
       <DependentUpon>Contact.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Donate.aspx.cs">
+      <DependentUpon>Donate.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Donate.aspx.designer.cs">
+      <DependentUpon>Donate.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Events.aspx.cs">
       <DependentUpon>Events.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Events.aspx.designer.cs">
       <DependentUpon>Events.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Gallery.aspx.cs">
+      <DependentUpon>Gallery.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Gallery.aspx.designer.cs">
+      <DependentUpon>Gallery.aspx</DependentUpon>
     </Compile>
     <Compile Include="Home.aspx.cs">
       <DependentUpon>Home.aspx</DependentUpon>
@@ -187,6 +204,13 @@
     </Compile>
     <Compile Include="Login.aspx.designer.cs">
       <DependentUpon>Login.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="OurWork.aspx.cs">
+      <DependentUpon>OurWork.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="OurWork.aspx.designer.cs">
+      <DependentUpon>OurWork.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Support.aspx.cs">
